// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheet /> should render Header/Footer/Body properly 1`] = `
<div>
  <div
    class="BaseBox-bmPWx BottomSheetBackdropweb__StyledBottomSheetBackdrop-sc-198k9f6-0 kpjFgW gQNTBU"
    data-blade-component="base-box"
    data-testid="bottomsheet-backdrop"
    opacity="1"
  />
  <div
    aria-modal="true"
    class="BottomSheetweb__BottomSheetSurface-qlloie-0 djockt"
    data-blade-component="bottom-sheet"
    role="dialog"
    style="opacity: 1; pointer-events: all; height: 0px; bottom: 0px; z-index: 100;"
  >
    <div
      class="BaseBox-bmPWx gWGQoD"
      data-blade-component="base-box"
    >
      <div
        class="BottomSheetGrabHandleweb__BottomSheetGrabHandle-mo12ak-0 jpGBjs"
        data-blade-component="BottomSheetGrabHandle"
      />
      <div
        class="BaseBox-bmPWx cImMcF"
        data-blade-component="bottom-sheet-header"
      >
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx HnFxS"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx isYLKC"
              data-blade-component="base-box"
            >
              <div
                class="BaseBox-bmPWx jPnCFC"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx lhloZM"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx kGcQUv"
                    data-blade-component="base-box"
                  >
                    <h6
                      class="StyledBaseText-dVBfTO dFejDk"
                      data-blade-component="heading"
                    >
                      Address Details
                    </h6>
                    <div
                      class="BaseBox-bmPWx ktWMhw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx bhAnXJ"
                        data-blade-component="box"
                      >
                        <div
                          class="BaseBox-bmPWx jLCxzZ"
                          data-blade-component="counter"
                        >
                          <div
                            class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 bEaUIc hNXeTn"
                            data-blade-component="base-box"
                          >
                            <div
                              class="BaseBox-bmPWx KJLNh"
                              data-blade-component="base-box"
                            >
                              <p
                                class="StyledBaseText-dVBfTO kHUjbS"
                                data-blade-component="text"
                              >
                                2
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledBaseText-dVBfTO cGMqFI"
                    data-blade-component="text"
                  >
                    Saving addresses will improve your checkout experience
                  </p>
                </div>
              </div>
              <div
                class="BaseBox-bmPWx kFTMWM"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx bhAnXJ"
                  data-blade-component="box"
                >
                  <div
                    class="BaseBox-bmPWx jLCxzZ"
                    data-blade-component="badge"
                  >
                    <div
                      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 dLUnUf iPenii"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx KJLNh"
                        data-blade-component="base-box"
                      >
                        <p
                          class="StyledBaseText-dVBfTO cunbeN"
                          data-blade-component="text"
                        >
                          Action Needed
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="BaseBox-bmPWx bhAnXJ"
                data-blade-component="box"
              >
                <button
                  aria-label="Close"
                  class="StyledIconButtonweb__StyledButton-sc-1f4cg7d-0 gvuEeM"
                  data-blade-component="icon-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="20px"
                    viewBox="0 0 24 24"
                    width="20px"
                  >
                    <path
                      d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                      data-blade-component="svg-path"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
            data-blade-component="divider"
          />
        </div>
      </div>
      <div
        class="BaseBox-bmPWx jiLTJh"
        data-blade-component="bottom-sheet-body"
        data-testid="bottomsheet-body"
        style="user-select: auto; overflow: auto;"
      >
        <div
          class="BaseBox-bmPWx lhcKjI"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            BottomSheet body
          </p>
        </div>
      </div>
      <div
        class="BaseBox-bmPWx dazEdx"
        data-blade-component="bottom-sheet-footer"
      >
        <div
          class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
          data-blade-component="divider"
        />
        <div
          class="BaseBox-bmPWx kGtVIy"
          data-blade-component="base-box"
        >
          <button
            class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hDfvuZ"
            data-blade-component="button"
            role="button"
            type="button"
          >
            <div
              class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
              data-blade-component="base-box"
            >
              <div
                class="StyledBaseText-dVBfTO jSaisz"
                data-blade-component="base-text"
              >
                Remove address
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BottomSheet /> should render empty header with padding 0 1`] = `
<div>
  <div
    class="BaseBox-bmPWx BottomSheetBackdropweb__StyledBottomSheetBackdrop-sc-198k9f6-0 kpjFgW gQNTBU"
    data-blade-component="base-box"
    data-testid="bottomsheet-backdrop"
    opacity="1"
  />
  <div
    aria-modal="true"
    class="BottomSheetweb__BottomSheetSurface-qlloie-0 djockt"
    data-blade-component="bottom-sheet"
    role="dialog"
    style="opacity: 1; pointer-events: all; height: 0px; bottom: 0px; z-index: 100;"
  >
    <div
      class="BaseBox-bmPWx gWGQoD"
      data-blade-component="base-box"
    >
      <div
        class="BottomSheetGrabHandleweb__BottomSheetGrabHandle-mo12ak-0 bPMZxz"
        data-blade-component="BottomSheetGrabHandle"
      />
      <div
        class="BaseBox-bmPWx QrTns"
        data-blade-component="bottom-sheet-header"
      >
        <div
          class="BaseBox-bmPWx ihzyIt"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx kSTpWI"
            data-blade-component="base-box"
          >
            <button
              aria-label="Close"
              class="StyledIconButtonweb__StyledButton-sc-1f4cg7d-0 gvuEeM"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="BaseBox-bmPWx jiLTJh"
        data-blade-component="bottom-sheet-body"
        data-testid="bottomsheet-body"
        style="user-select: auto; overflow: auto;"
      >
        <div
          class="BaseBox-bmPWx jriGvY"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            BottomSheet body
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
